app/assets/stylesheets/dashboard.css.less
/* ... */
.article.timeseries{
  .meta{
    // h2{
    //   // margin:40px 0 0;
    //   position:relative;
    //   top:2px;
    // }
    .info {
      margin-bottom:1px;
      .time-series-year
      {
        font:14px 'nokiasans_s60', 'sans-serif';
        color: #fff;
        text-align: center;
        background-color: #e28c95;
        width:34px;
        height:26px;
        line-height: 30px;
        margin:0 10px 1px 1px;
        display:table-cell;
        vertical-align:top;
        &.last
        {
          border-bottom-right-radius: 2px;
          border-bottom-left-radius: 2px;
        }
      }
      .timestamps {
        padding-left:10px;
        &.no-padding{
          padding-left: 0
        }
      }
    }
  }
}

.article.owner-dashboard{
  .meta {
    padding:36px 40px;
    .col
    {
      position:relative;
      &:first-of-type
      {
        width:auto;   
        max-width:360px;     
      }
      &:last-of-type
      {
        max-width:1024px;
        width:auto;
        padding: 0 0 0 30px;
      }
    }
    h1 {
      font:16px 'prime_en','sans-serif';
      color:@d67456;
      text-transform:uppercase;
      margin:0;
      padding-bottom:20px;
      &:lang(ka) {
        font:16px 'prime_ka','sans-serif';
      }
    }
    .info {
      display:inline-block;
    }
    .info > div{
      display:block;
      font:16px 'sourcesans_pro_li', 'sans-serif';
      color: #656565;
      line-height:18px;      
      padding:0 0 6px 28px;
      margin:0px;
      vertical-align:top;
      &.country { background:transparent url(/assets/icons/country.svg) left 1px no-repeat; }
      &.affiliation { background:transparent url(/assets/icons/affiliation.svg) left 1px no-repeat; }
      &.status { background:transparent url(/assets/icons/status.svg) left 1px no-repeat; }
      &.website_url { background:transparent url(/assets/icons/website_org.svg) left 1px no-repeat; }
      &.email { background:transparent url(/assets/icons/email.svg) left 1px no-repeat; }
      &.phone { background:transparent url(/assets/icons/phone.svg) left 1px no-repeat; }
      &.organizations { 
        background:transparent url(/assets/icons/organization.svg) left 1px no-repeat;
        color:#73a580;
        a {
          color:#73a580;
        }
        ul {
          display:inline-block;
          li {
            display:block;
          }
        }
      }
      span
      {
        font:16px 'sourcesans_pro_sbi', 'sans-serif';
        position:relative;
        top:-1px;
        vertical-align:top;
      }
      a{
        color: #3c4352;
        text-decoration: underline;
        &:hover{
          text-decoration: none;
        }
      }
      &:lang(ka) {line-height:26px;}
      &:last-child { margin-right: 0; }
    }
  }
}
/* ... */

